* Solver timeout is reported by concolic evaluator.
* Parallelism is available to check type statements in parallel instead of in series.
* Interpreter for all three languages (Bluejay, Desugared, Embedded).
* Some simple error messages for type mismatch and abort reasons.
* Delete DBMC, Sato, and Jil-analysis.
* Translation specification is in docs.
* Upgraded to OCaml 5.2.0.

Language

* Parametrized recursive types with `Mu t a b c. tau`, where `t` is a type function with parameters `a`, `b`, and `c`.
* Sugar for refined function parameters, e.g. `let f (x : int | x == 0) ...`.
* Dependent parameters have `dependent` or `dep` (strictly shorthand) keyword preceding them, and no more `letd`.
* Deterministic functions.
* It is a parse error to have patterns after a catchall pattern.
* `val t1 = t2` sugar for `val t1 : singlet t2`.
* `type`, `top`, `bottom`, `singlet`.
* No more type casing.
* Bluejay programs are statement lists.
* Modules and module types, and dependent record types.
* Refinement types can optionally name the candidate to then use a nonfunction as the predicate.
* Refinement types use normal curly braces.
* Record types use normal curly braces.
* `unit`.
* `List` renamed to `list`, and `Mu` renamed to `mu`.
* `let%bind x = e1 in e2` is sugar for `bind e1 (fun x -> e2)`.
* Bluejay has `|>` for pipelining.
* `_` allowed as lvalue.
* Use `&&` and `||` for logical binary operations.
* Use `and` instead of `with` for mutually recursive functions.
* No parentheses needed on typed let-expressions.
* Variant declarations use `of` instead of double backtick.
* Single pipe `|` between variant declarations, and pipe is optional before first constructor declaration.
* Embedded target no longer in ANF.

Performance

* Check physical equality of values before checking intensional value equality
* Solver is never loaded.
* Remove unnecessary case in singleton variant generation, so path tree is smaller.