@@ -2,7 +2,7 @@
   "name": "bluejay-language",
   "displayName": "Bluejay Language",
   "description": "Syntax highlighting for Bluejay programming language",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "engines": {
     "vscode": "^1.74.0"
   },
