@@ -37,7 +37,7 @@
       "patterns": [
         {
           "name": "keyword.other.bluejay",
-          "match": "\\b(if|then|else|match|with|end|let|rec|in|fun|val|sig|struct|of|dep|dependent|and|mu|singlet)\\b"
+          "match": "\\b(if|then|else|match|with|end|let|rec|in|fun|val|sig|struct|of|dep|dependent|and|mu)\\b"
         },
         {
           "name": "constant.language.boolean.bluejay",
@@ -45,7 +45,7 @@
         },
         {
           "name": "support.type.builtin.bluejay",
-          "match": "\\b(int|bool|unit|top|bottom|list|type)\\b"
+          "match": "\\b(int|bool|unit|top|bottom|list|singlet|type)\\b"
         },
         {
           "name": "support.function.builtin.bluejay",
