@@ -54,7 +54,7 @@ let desugar_pgm (names : (module Fresh_names.S)) (pgm : Bluejay.pgm) ~(do_type_s
   let rec desugar (expr : Bluejay.t) : Desugared.t =
     match expr with
     (* Base cases *)
-    | (EInt _ | EBool _ | EVar _ | EPick_i | ETypeInt | ETypeBool | EType | ETypeTop | ETypeBottom) as e -> e
+    | (EInt _ | EBool _ | EVar _ | EPick_i | ETypeInt | ETypeBool | EType | ETypeTop | ETypeBottom | ETypeSingle) as e -> e
     (* Simple propogation *)
     | EBinop { left ; binop ; right } -> begin
       match binop with
@@ -100,8 +100,6 @@ let desugar_pgm (names : (module Fresh_names.S)) (pgm : Bluejay.pgm) ~(do_type_s
       ETypeVariant (List.map ls_e ~f:(fun (label, e) -> label, desugar e))
     | ELetTyped { typed_var = { var ; tau } ; defn ; body ; do_wrap ; do_check } ->
       ELetTyped { typed_var = { var ; tau = desugar tau } ; defn = desugar defn ; body = desugar body ; do_wrap ; do_check }
-    | ETypeSingle tau ->
-      ETypeSingle (desugar tau)
     (* Assert/assume *)
     | EAssert assert_expr ->
       EIf
@@ -150,20 +148,22 @@ let desugar_pgm (names : (module Fresh_names.S)) (pgm : Bluejay.pgm) ~(do_type_s
           ]
         )
       }
-    | ETypeList e_tau ->
+    | ETypeList ->
+      let tau = Names.fresh_id ~suffix:"tau_list" () in
       let t = Names.fresh_id ~suffix:"list_t" () in
-      ETypeMu { var = t ; params = [] ; body =
-        ETypeVariant
-          [ (Reserved.nil_type, unit_type)
-          ; (Reserved.cons_type,
-            ETypeRecord (Parsing_tools.record_of_list
-              [ (Reserved.hd, desugar e_tau)
-              ; (Reserved.tl, EVar t)
-              ]
+      abstract_over_ids [tau] @@ 
+        ETypeMu { var = t ; params = [] ; body =
+          ETypeVariant
+            [ (Reserved.nil_type, unit_type)
+            ; (Reserved.cons_type,
+              ETypeRecord (Parsing_tools.record_of_list
+                [ (Reserved.hd, EVar tau)
+                ; (Reserved.tl, EVar t)
+                ]
+              )
             )
-          )
-          ]
-      }
+            ]
+        }
     (* Intersection type *)
     | ETypeIntersect ls_e ->
       desugar @@
